--- a/app/tab1/tab1.page.html
+++ b/app/tab1/tab1.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Tab 1
+      Tab 1 ernest test
     </ion-title>
   </ion-toolbar>
 </ion-header>
