--- a/app/tab3/tab3.page.html
+++ b/app/tab3/tab3.page.html
@@ -1,17 +1,16 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Tab 3 Jp
+      Login
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 3 Jp</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <app-explore-container name="Tab 3 page"></app-explore-container>
+  <form>
+    <ion-item>
+      <ion-label>Name:</ion-label>
+      <input/>
+    </ion-item>
+  </form>
 </ion-content>
