--- a/app/tabs/tabs.page.html
+++ b/app/tabs/tabs.page.html
@@ -2,8 +2,8 @@
 
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="tab1">
-      <ion-icon name="triangle"></ion-icon>
-      <ion-label>Tab 1</ion-label>
+      <ion-icon name="fast-food-outline"></ion-icon>
+      <ion-label>Menu</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab2">
