--- a/app/menudetail/menudetail.page.html
+++ b/app/menudetail/menudetail.page.html
@@ -7,12 +7,12 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content *ngFor="let m of menu">
-  <ion-img src="{{menu_Data?.image}}"></ion-img>
+<ion-content >
+  <ion-img src="http://localhost/Group2_Project/{{menu_detail?.image}}"></ion-img>
   <div class="ion-padding">
-    <h1>{{menu_Data?.title}}</h1>
-    <h2 class="article">{{menu_Data?.description}}</h2>
-    <h2>${{menu_Data?.price}}</h2>
+    <h1>{{menu_detail?.title}}</h1>
+    <h2 class="article">{{menu_detail?.description}}</h2>
+    <h2>${{menu_detail?.price}}</h2>
   </div>
   <ion-input class="ion-text-center" type="number" min="1"></ion-input>
   <ion-button color="warning">Add</ion-button>
