--- a/app/menudetail/menudetail.page.html
+++ b/app/menudetail/menudetail.page.html
@@ -14,7 +14,10 @@
     <h2 class="article">{{menu_detail?.description}}</h2>
     <h2>${{menu_detail?.price}}</h2>
   </div>
-  <ion-input class="ion-text-center" type="number" min="1"></ion-input>
+  <ion-button>-</ion-button>
+  1
+  <ion-button>+</ion-button>
+
   <ion-button color="warning">Add</ion-button>
 
 </ion-content>
