--- a/app/tab3/recentorder/recentorder.page.html
+++ b/app/tab3/recentorder/recentorder.page.html
@@ -31,8 +31,8 @@
           <ion-thumbnail slot="start">
             <img alt="Silhouette of mountains" src="https://ionicframework.com/docs/img/demos/thumbnail.svg" />
           </ion-thumbnail>
-          <ion-label>{{o.menu_title}} x {{o.menu_qty}}</ion-label>
-          <ion-label>{{o.menu_price}} </ion-label>
+          <ion-label>{{o.menu_title}} </ion-label>
+          <ion-label>{{o.menu_price}} x {{o.menu_qty}}</ion-label>
         </ion-item>
   
         
