--- a/app/tab2/checkoutinfo/checkoutinfo.page.html
+++ b/app/tab2/checkoutinfo/checkoutinfo.page.html
@@ -9,38 +9,40 @@
 
 <ion-content>
   <div  class="checkoutDetail">
-    <form [formGroup]="checkoutDetail"> 
+    <form [formGroup]="checkoutDetailFrm"> 
       <ion-item style="text-align:center">
         <ion-label>Purchase Detail</ion-label>
       </ion-item>
       
       <ion-item>
         <ion-label>Name:</ion-label>
-        <ion-input name="name" type="name" [clearInput]="true" formControlName="name"></ion-input>
+        <ion-input  type="name" [clearInput]="true" formControlName="name"></ion-input>
       </ion-item>
       <ion-item>
         <ion-label>Email:</ion-label>
-        <ion-input name="email" type="email" [clearInput]="true" formControlName="email"></ion-input>
+        <ion-input  type="email" [clearInput]="true" formControlName="email"></ion-input>
       </ion-item>
       <ion-item>
         <ion-label>Mobile:</ion-label>
-        <ion-input name="mobile" type="mobile" [clearInput]="true" formControlName="mobile"> </ion-input>
+        <ion-input  type="mobile" [clearInput]="true" formControlName="mobile"> </ion-input>
       </ion-item>
       <ion-item>
         <ion-label>Person number:</ion-label>
-        <ion-input name="person_number" type="text" [clearInput]="true" formControlName="person_number"></ion-input>
+        <ion-input  type="number" [clearInput]="true" formControlName="person_number"></ion-input>
       </ion-item>
       <ion-item>
         <ion-label>Date:</ion-label>
-        <ion-input name="date" type="date" [clearInput]="true" formControlName="date"></ion-input>
+        <ion-input  type="date" [clearInput]="true" formControlName="date"></ion-input>
       </ion-item>
       <ion-item>
-        <ion-label>Remark:</ion-label>
-        <ion-input name="remark" type="text" [clearInput]="true" formControlName="remark"></ion-input>
+        <ion-label>Remark</ion-label>
+        <ion-textarea placeholder="Type something here" formControlName="remark"></ion-textarea>
       </ion-item>
 
     </form>
-
-    <ion-button [disabled]="!checkoutDetail.valid" routerLink="/thank">Submit</ion-button>
+    <div>
+      <ion-button [disabled]="!checkoutDetailFrm.valid" (click)="checkout()" expand="block">Submit</ion-button>
+    </div>
+    
   </div>
 </ion-content>
