--- a/app/tab3/tab3.page.html
+++ b/app/tab3/tab3.page.html
@@ -3,7 +3,7 @@
     <ion-title>
       Home
     </ion-title>
-    <ion-button slot="end" (click)="logout()"><ion-icon name="log-out-outline"></ion-icon></ion-button>
+    <ion-button *ngIf="token !== ''" slot="end" (click)="logout()"><ion-icon name="log-out-outline"></ion-icon></ion-button>
   </ion-toolbar>
 </ion-header>
 
