--- a/app/tab2/tab2.page.html
+++ b/app/tab2/tab2.page.html
@@ -4,12 +4,12 @@
       <ion-back-button slot="start"></ion-back-button>
     </ion-buttons>
     <ion-title>
-      Tab 2
+      Cart
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
+<ion-content [fullscreen]="true" class="ion-padding">
   <div><h1>Your Cart</h1></div>
   
   <div>
